Issue #262 - Ensure badge icons aren't too tall, even if icons are 404s

--- a/blocks/site/_badges.scss
+++ b/blocks/site/_badges.scss
@@ -14,6 +14,7 @@ ul.badges {
 
   .icon {
     width: 120px;
+    max-height: 120px;
     line-height: 120px;
     float: left;
     margin-right: 10px;
